--- a/src/app/support-hub/auth/login/support-hub-login.component.scss
+++ b/src/app/support-hub/auth/login/support-hub-login.component.scss
@@ -1,3 +1,5 @@
+:host { display: block; }
+
 .sh-login-header {
   text-align: center;
   margin-bottom: 2rem;
